# sundile_rs

./: .gitignore  Cargo.toml  README.md
assets/: Cargo.toml  README.md
assets/src/: internal_types.rs  lib.rs  serializer.rs  tests.rs  types.rs  util.rs
assets/src/converters/: model.rs  shader.rs
assets/src/raw/: mod.rs  model.rs  shader.rs
assets/src/types/: fonts.rs  mod.rs  models.rs  shaders.rs  text.rs  textures.rs
assets/tests/: tests.rs
assets/tests/assets/shaders/: passthrough.wgsl  passthrough.wgsl.spv
common/: Cargo.toml  README.md
common/src/: input.rs  lib.rs  time.rs
core/: Cargo.toml  README.md
core/assets/shaders/: 2d.wgsl  default.wgsl  passthrough.wgsl
core/src/: debug_gui.rs  defaults.rs  game.rs  lib.rs  renderer.rs  renderer2d.rs  scene.rs
engine/: Cargo.toml
engine/src/: builders.rs  debug_gui.rs  lib.rs
examples/: Cargo.toml  README.md
examples/examples/basic/: main.rs
examples/examples/model_import/: main.rs
examples/examples/model_import/assets/hero_chao/: hero_chao.mtl
examples/examples/text/: main.rs
examples/src/: lib.rs  main.rs
examples/src/basic/: mod.rs
examples/src/model_import/: mod.rs
examples/src/text/: mod.rs
frontend/: Cargo.toml  README.md
frontend/src/: builders.rs  debug_gui.rs  lib.rs  main.rs  renderer.rs
graphics/: Cargo.toml  README.md
graphics/src/: camera.rs  instance.rs  lib.rs  light.rs  model.rs  render_target.rs  text.rs  texture.rs  texture_atlas.rs
scripting/: Cargo.toml  README.md  test.ron
scripting/src/: components.rs  example_scene.ron  example_scene.rs  lib.rs  scene.rs  systems.rs  tests.rs
sundile_core/: Cargo.toml
sundile_core/src/: debug_gui.rs  game.rs  lib.rs  renderer.rs  renderer2d.rs
tools/: Cargo.toml  README.md
tools/pack/src/: index.html  main.rs
tools/pack/src/web/: index.html
tools/serialize/src/: main.rs
