[workspace]
resolver = "2"
members = [
    "assets",
    "common",
    "graphics",
    "frontend",
]

[workspace.dependencies]
# rendering
wgpu = { version = "0.15", features = ["trace", "webgl", "spirv"] }
winit = "0.28"
winit_input_helper = "0.14"

# diagnostics
log = "0.4"
anyhow = "1.0"
thiserror = "1.0"

# threading
futures = "0.3"

# wasm
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = {version = "0.3", features = [
    "Document",
    "Window",
    "HtmlCanvasElement",
    "Performance",
] }
