[package]
name = "sundile_assets"
version = "0.1.0"
edition = "2021"

[dependencies]
#general
bincode = "1.3"
serde = {version = "1.0", features = ["derive"]}
sundile_common = { path = "../common/"}
sundile_graphics = { path = "../graphics/" }

# workspace
thiserror = {workspace = true}
wgpu = {workspace = true}
log = {workspace = true}
futures = {workspace = true}

#models
tobj = { version = "3.2", optional = true }
cgmath = { version = "0.18", optional = true }

[features]
default = ["models", "shaders", "fonts", "textures", "text"]
models = ["tobj", "cgmath"]
shaders = []
fonts = []
textures = []
text = []
