[package]
name = "sundile_common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wgpu = { version = "0.12", features = ["trace", "webgl", "spirv"] }
winit = "0.26"
log = "0.4"
anyhow = "1.0"
thiserror = "1.0"
futures = "0.3"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = {version = "0.3", features = [
    "Document",
    "Window",
    "HtmlCanvasElement",
    "Performance",
] }
winit_input_helper = "0.11"
