[package]
name = "sundile_common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["wasm"]
wasm = ["web-sys"]

[dependencies]
winit = {workspace = true}
web-sys = {workspace = true, optional=true}
