[package]
name = "sundile_core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# general
futures = "*"
anyhow = "*"

# rendering 
winit = "*"
wgpu = "*"
bytemuck = "*"
cgmath = "*"
wgpu_glyph = "0.16.0"

# ecs
legion = "*"

# assets
bincode = "*"

# internal
sundile_graphics = {path = "../graphics/"}
sundile_assets = { path = "../assets/" }
sundile_scripting = { path = "../scripting/" }