[package]
name = "sundile"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# general
env_logger = "0.9.0"

# debug_gui
# egui = "0.21.*"
# egui-winit = "0.21.*"
# egui_wgpu_backend = { git = "https://github.com/hasenbanck/egui_wgpu_backend" } #TODO: Watch for cargo updates

# internal
sundile_common = { path = "../common" }
sundile_core = { path = "../core" }
sundile_graphics = { path = "../graphics" }
sundile_assets = { path = "../assets" }

# workspace
wgpu = {workspace = true}
winit = {workspace = true}
wasm-bindgen = {workspace = true}
log = {workspace = true}
futures = {workspace = true}
thiserror = {workspace = true}

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.7"
console_log = "0.2.0"
web-sys = {workspace = true}
