[package]
name = "sundile_examples"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name="main"
path="src/main.rs"

[features]
default = []
basic = []
model_import = ["cgmath"]
text = []

[dependencies]
# local crates
sundile = {path="../engine/"}

# deps
cgmath = {version = "0.18", optional=true}

# workspace deps
wgpu = {workspace = true}
winit = {workspace = true}
web-sys = {workspace = true}
wasm-bindgen = {workspace = true}
