[package]
name = "sundile"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# general
winit = "*"
legion = "*"
futures = "*"

# debug_gui
egui = "*"
egui_wgpu_backend = "*"
egui_winit_platform = "*"

# internal
sundile_core = { path = "../core" }
sundile_graphics = { path = "../graphics" }
sundile_assets = { path = "../assets" }
sundile_scripting = { path = "../scripting" }