[package]
name = "sundile_graphics"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "*"
winit = "*"
cgmath = "*"
wgpu = { version = "*", features = ["trace", "webgl", "spirv"] }
pollster = "*"
bytemuck = {version = "*", features = [ "derive" ]}
tobj = "*"
anyhow = "*"
rayon = "*"
rand = "*"
chrono = "*"
futures = "*"
wgpu_glyph = "*"
serde = "*"

# sundile_scripting = { path = "../scripting"}