[package]
name = "sundile_graphics"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sundile_common = { path = "../common" }

bytemuck = {version = "1.9", features = [ "derive" ]}
cgmath = "0.18"
tobj = "3.2"
chrono = {version = "0.4", features = ["wasmbind"]}
wgpu_glyph = "0.16"
serde = "1.0"

[target.'cfg(target_arch="wasm32")'.dependencies.image]
version = "0.24"
default-features = false
features = ["gif", "ico", "png", "pnm", "tga", "webp", "bmp", "hdr", "dxt", "dds", "farbfeld", "openexr"] #remove tiff, jpeg, jpeg-rayon bc rayon

[target.'cfg(not(target_arch="wasm32"))'.dependencies.image]
version = "0.24"
default-features = true