[package]
name = "sundile_scripting"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0"
ron = "0.7"

[target.'cfg(target_arch="wasm32")'.dependencies.legion]
version = "0.4"
default-features = false
features = ["serialize", "crossbeam-events", "codegen", "wasm-bindgen"]

[target.'cfg(not(target_arch="wasm32"))'.dependencies.legion]
version = "0.4"
default-features = true