[package]
name = "tools"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = 'itch-pack'
required-features = ['itch-pack']

[features]
default = ["itch-pack"]
itch-pack = ["anyhow", "zip"]

[dependencies]
# itch-pack
anyhow = {version = "1.*", optional=true}
zip = {version="0.6.0", optional=true}
