[package]
name = "tools"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = 'sundile_pack'
required-features = ['sundile_pack']

[features]
default = ["sundile_pack"]
sundile_pack = ["thiserror", "zip", "clap"]

[dependencies]
# itch-pack
zip = {version="0.6.0", optional=true}
clap = { version = "4.2.1", optional = true, features = ["derive"] }
thiserror = {workspace = true, optional = true}
